# tennis_back

./: manage.py  pyproject.toml  requests.http  schema.yml
matches/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
matches/migrations/: 0001_initial.py  0002_match_score1_match_score2.py  0003_alter_match_score1_alter_match_score2.py  0004_alter_match_match_date.py  0005_match_first_play.py  0006_remove_match_score1_remove_match_score2_set.py  0007_alter_set_game1_score1_alter_set_game1_score2_and_more.py  0008_set_winner.py  0009_alter_set_options_alter_match_first_play_and_more.py  0010_remove_set_game1_score1_remove_set_game1_score2_and_more.py
tennis_back/: asgi.py  settings.py  urls.py  wsgi.py
tokens/: permissions.py
tournaments/: admin.py  models.py  serializers.py  urls.py  views.py
tournaments/migrations/: 0001_initial.py  0002_tournament_description.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_name_alter_user_email_player.py
